# hello

./: build.sh  build_exoplayer.sh
FirstApp/FirstApplication/: gradle.properties
FirstApp/FirstApplication/app/: build.gradle
OriginalApp/FirstApplication/: settings.gradle
OriginalApp/FirstApplication/app/: build.gradle  signkey.jks
TestApp/FirstApplication/app/: proguard-rules.pro
ctest/: Makefile  goto_test.c  run.sh
examples/: jac_sign.sh  sign_config.txt
exoplayer/demo/: CMakeLists.txt  build.gradle
exoplayer/demo/src/main/cpp/: A.c  B.c  CC.c  D.c  JGJ.c  JNC.c  PlayerActivity.c  Wine.c  native-lib.c  registerNative.h
exoplayer/demo/src/main/java/com/google/android/exoplayer2/demo/: A.java  B.java  CC.java  D.java  DemoApplication.java  JGJ.java  JNC.java  PlayerActivity.java  Wine.java
repackage/: app-native.apk  app-release.apk  readme
src/cpp/: Android.mk  JACCommonModule.cpp  antiDebug.cpp  classWalker.cpp  classWalker8.cpp  classWalker9.cpp  dexAdaptor.cpp  dexOperator.cpp  dexOperator10_above.cpp  dexOperator8.cpp  dexOperator9.cpp  dexOptimize.cpp  irdetoJavaSecurity.cpp  irdetoJavaSecurityExtension.cpp  jniInterface.cpp  networkManager.cpp  threadManager.cpp
src/cpp/include/: DexHeader.h  DexStructs1.h  DexStructs2_8.h  DexStructs2_9.h  DexStructs3.h  DexStructs4.h  JACCommonModule.h  ac_Stdlib_Internal.h  antiDebug.h  classWalkerImpl.h  dexAdaptor.h  dexOperator.h  dexOptimize.h  irdetoJavaSecurity.h  irdetoJavaSecurityExtension.h  iso98wrap.h  networkManager.h  (+2 more)
tools/jac_sign/: Makefile  jac_sign.c
transcode/: makefile_xlib.mk
(+155 files in other folders)
